# angel-one-stock-analysis

./: .env.example  .gitignore  API_INTEGRATION_SUMMARY.md  CHANGES.md  CLAUDE_DESKTOP_CONFIG.md  DIAGNOSIS.md  Dockerfile  EXAMPLES.md  FINAL_SETUP_SUMMARY.md  FREE_STOCK_APIS.md  GITHUB_PAGES_SETUP.md  INDEX.md  INDIAN_ETFS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RESTART_INSTRUCTIONS.md  SETUP_CHECKLIST.md  SETUP_COMPLETE.md  SIMPLE_FIX.md  START_HERE.md  TROUBLESHOOTING.md  analyze_all_stocks.py  analyze_gold_etf.py  analyze_reliance.py  direct_query.py  docker-compose.yml  generate_website.py  get_historical.py  get_overview.py  indian_etfs.py  pyproject.toml  requirements.txt  run_mcp_server.bat  run_mcp_server.py  test_api_providers.py  test_connection.py  test_mcp_server.sh  test_tools.py
.claude/: mcp.json
docs/: README.md  index.html  reports.html
docs/css/: style.css
docs/data/: etf_analysis_report.txt  gold_etf_report.txt  stock_analysis_report.txt
docs/js/: main.js
src/stock_analysis/: __init__.py  api_providers.py  constant_parameters.py  main.py
